test_suite/alan-2022-examples/failing/004560_mutation.alan
source g begin leave false boolean end
